fixes global spacing issues

--- a/sass/routes/_work-show.scss
+++ b/sass/routes/_work-show.scss
@@ -32,7 +32,14 @@
     }
   }
 
-  .image-block + p {
-    line-height: 35px;
+  .image-block {
+    img {
+      max-width: 100%;
+      width: 100%;
+    }
+
+    + p {
+      line-height: 35px;
+    }
   }
 }
