--- a/static/css/main.css
+++ b/static/css/main.css
@@ -255,6 +255,37 @@ h1, h2, h3, h4, h5, h6 {
   stroke: #D0021B;
 }
 
+#index .home-intro {
+  padding: 1em;
+}
+@media (min-width: 52em) {
+  #index .home-intro {
+    padding: 4em 1em;
+  }
+}
+#index .home-subline {
+  padding-bottom: 1em;
+}
+@media (min-width: 52em) {
+  #index .home-subline {
+    padding-bottom: 4em;
+  }
+}
+#index .see-more {
+  padding: 0;
+}
+#index .see-more > p {
+  margin-bottom: 1em;
+  padding: 0;
+}
+@media (min-width: 52em) {
+  #index .see-more {
+    padding-bottom: 2em;
+  }
+}
+#index .home-item.last-item {
+  margin-bottom: 0;
+}
 #index .see-all {
   height: calc(100vh - 575px);
 }
@@ -321,6 +352,10 @@ h1, h2, h3, h4, h5, h6 {
   #work-show .work-block {
     margin-top: 0;
   }
+}
+#work-show .image-block img {
+  max-width: 100%;
+  width: 100%;
 }
 #work-show .image-block + p {
   line-height: 35px;
@@ -724,16 +759,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .home-block {
-  padding-top: 125px;
+  padding-top: 80px;
   position: relative;
 }
 .home-block .title-bar {
-  height: 125px;
+  height: 80px;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
-  bottom: -125px;
+  bottom: -80px;
 }
 .home-block .title-bar.next {
   cursor: pointer;
@@ -744,6 +779,17 @@ h1, h2, h3, h4, h5, h6 {
 }
 .home-block .title-bar.next:hover {
   transform: translateY(-70px);
+}
+@media (min-width: 52em) {
+  .home-block .title-bar {
+    height: 125px;
+    bottom: -125px;
+  }
+}
+@media (min-width: 52em) {
+  .home-block {
+    padding-top: 125px;
+  }
 }
 
 @media (min-width: 52em) {
